--- a/css/content.css
+++ b/css/content.css
@@ -33,3 +33,25 @@
     border-radius: 24px;
     text-align: center;
 }
+
+@media screen and (max-width: 720px){
+    #title {
+        margin: 15vh 0 15vh 0;
+        font-size: 10vw;
+    }
+
+    #number {
+        font-size: 25vw;
+        margin-bottom: 7.5vh;
+    }
+    
+    #btnContainer {
+        margin-bottom: 7.5vh;
+    }
+
+    #btnContainer > a > div {
+        font-size: 7.5vw;
+        padding: 0 7.5vw;
+        border-radius: 18px;
+    }
+}
